Opened 13 years ago
Closed 13 years ago
#8433 closed bug (fixed)
MediaPlayer reports wrong audio bitrate
Reported by: | luroh | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/MediaPlayer | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Attachments (2)
Change History (7)
by , 13 years ago
Attachment: | wrong_bitrate.png added |
---|
by , 13 years ago
Attachment: | InfoWin.diff added |
---|
comment:1 by , 13 years ago
patch: | 0 → 1 |
---|
follow-up: 3 comment:2 by , 13 years ago
Works fine here with a random collection of ogg, wav, mp3, ogv, mp4 and mov samples. Nice, thanks. :)
comment:3 by , 13 years ago
Replying to luroh:
Works fine here with a random collection of ogg, wav, mp3, ogv, mp4 and mov samples. Nice, thanks. :)
On what rev? On hrev 44007, I still get negative bitrates on some files.
comment:4 by , 13 years ago
By "works fine", I mean the patch from starsseed (it needs to be applied manually).
comment:5 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Applied in hrev44021. I had to apply the patch manually. Please use git format-patch next time.
Note:
See TracTickets
for help on using tickets.
the rate argument is a float (not an integer)