MediaPlayer: use float format for audio frequency (see #8433).